Fix netty native crash by switching to grpc-netty and adding JVM options

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-firestore</artifactId>
             <version>3.13.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.grpc</groupId>
+                    <artifactId>grpc-netty-shaded</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Add static Netty SSL support -->
