--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,11 @@
       <version>9.2.0</version>
     </dependency>
 
-    <!-- Jackson Databind -->
+    <!-- Jackson Databind (explicit version required) -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>2.15.2</version>
     </dependency>
 
     <!-- Email (JavaMail) -->
